plugins/groovy/testdata/highlighting/DuplicatedNamedArgs.groovy
def foo(Map map) {

}

foo(a:2, <error descr="Duplicated named parameter 'a' found">"a"</error>:2);